--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <% if current_user.avatar.attached? %>
           <%= image_tag current_user.avatar.variant(resize: "100x100") %>
         <% else %>
-          <%= image_tag('sample_pic.png', size: "100x100") %>
+          <%= image_tag('default_avatar.png', size: "100x100") %>
         <% end %>
         <%= link_to t('.edit_profile') , edit_user_registration_path, class: 'navbar-link' %> |
         <%= link_to t('.log_out'), destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
